@@ -1,5 +1,7 @@
 ;; you'll need to run the script at `deps/lein-to-deps` after changing any dependencies
-(def netty-version "4.1.94.Final")
+(def netty-version "4.1.100.Final")
+(def brotli-version "1.12.0")
+
 
 (defproject aleph (or (System/getenv "PROJECT_VERSION") "0.7.0-alpha2")
   :description "A framework for asynchronous communication"
@@ -7,10 +9,10 @@
   :license {:name "MIT License"}
   :dependencies [[org.clojure/clojure "1.11.1"]
                  [org.clojure/tools.logging "1.2.4" :exclusions [org.clojure/clojure]]
-                 [manifold "0.3.0" :exclusions [org.clojure/tools.logging]]
-                 [org.clj-commons/byte-streams "0.3.2"]
+                 [manifold "0.4.1" :exclusions [org.clojure/tools.logging]]
+                 [org.clj-commons/byte-streams "0.3.4"]
                  [org.clj-commons/dirigiste "1.0.3"]
-                 [org.clj-commons/primitive-math "1.0.0"]
+                 [org.clj-commons/primitive-math "1.0.1"]
                  [potemkin "0.4.6"]
                  [io.netty/netty-transport ~netty-version]
                  [io.netty/netty-transport-native-epoll ~netty-version :classifier "linux-x86_64"]
@@ -31,19 +33,35 @@
                                    [org.slf4j/slf4j-simple "1.7.30"]
                                    [com.cognitect/transit-clj "1.0.324"]
                                    [spootnik/signal "0.2.4"]
-                                   ;; This is for self-generating certs for testing ONLY:
-                                   [org.bouncycastle/bcprov-jdk18on "1.72"]
-                                   [org.bouncycastle/bcpkix-jdk18on "1.72"]]
+                                   ;; This is for dev and testing ONLY, not recommended for prod
+                                   [org.bouncycastle/bcprov-jdk18on "1.75"]
+                                   [org.bouncycastle/bcpkix-jdk18on "1.75"]
+                                   ;;[org.bouncycastle/bctls-jdk18on "1.75"]
+                                   [io.netty/netty-tcnative-boringssl-static "2.0.61.Final"]
+                                   ;;[com.aayushatharva.brotli4j/all ~brotli-version]
+                                   [com.aayushatharva.brotli4j/brotli4j ~brotli-version]
+                                   [com.aayushatharva.brotli4j/service ~brotli-version]
+                                   [com.aayushatharva.brotli4j/native-linux-aarch64 ~brotli-version]
+                                   [com.aayushatharva.brotli4j/native-linux-armv7 ~brotli-version]
+                                   [com.aayushatharva.brotli4j/native-linux-x86_64 ~brotli-version]
+                                   [com.aayushatharva.brotli4j/native-osx-aarch64 ~brotli-version]
+                                   [com.aayushatharva.brotli4j/native-osx-x86_64 ~brotli-version]
+                                   [com.aayushatharva.brotli4j/native-windows-x86_64 ~brotli-version]
+                                   [com.github.luben/zstd-jni "1.5.5-7"]]
                     :jvm-opts ["-Dorg.slf4j.simpleLogger.defaultLogLevel=debug"
                                "-Dorg.slf4j.simpleLogger.showThreadName=false"
                                "-Dorg.slf4j.simpleLogger.showThreadId=true"
                                "-Dorg.slf4j.simpleLogger.showLogName=false"
                                "-Dorg.slf4j.simpleLogger.showShortLogName=true"
-                               "-Dorg.slf4j.simpleLogger.showDateTime=true"]}
+                               "-Dorg.slf4j.simpleLogger.showDateTime=true"
+                               "-Dorg.slf4j.simpleLogger.log.io.netty.util=error"
+                               "-Dorg.slf4j.simpleLogger.log.io.netty.channel=warn"]}
              :test {:jvm-opts ["-Dorg.slf4j.simpleLogger.defaultLogLevel=off"]}
              :leak-level-paranoid {:jvm-opts ["-Dio.netty.leakDetectionLevel=PARANOID"]}
              :pedantic {:pedantic? :abort}
-             :trace {:jvm-opts ["-Dorg.slf4j.simpleLogger.defaultLogLevel=trace"]}}
+             :trace {:jvm-opts ["-Dorg.slf4j.simpleLogger.defaultLogLevel=trace"]}
+             :profile {:dependencies [[com.clojure-goes-fast/clj-async-profiler "1.1.1"]]
+                       :jvm-opts ["-Djdk.attach.allowAttachSelf"]}}
   :java-source-paths ["src-java"]
   :test-selectors {:default   #(not
                                  (some #{:benchmark :stress}
@@ -54,6 +72,7 @@
   :jvm-opts ^:replace ["-server"
                        "-Xmx2g"
                        "-XX:+HeapDumpOnOutOfMemoryError"
+                       "-XX:+PrintCommandLineFlags"
                        #_"-XX:+PrintCompilation"
                        #_"-XX:+UnlockDiagnosticVMOptions"
                        #_"-XX:+PrintInlining"]
